--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'private_docker_connection'
-    repository: 'azure_test'
+    repository: 'jaadds/azure_test'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
